Improved Debugging: 
-added setting to dump .zsf snapshot when a cpu panic is fired
-debug CPU window: can now resize height and have more debug lines
-cpu transaction log: faster when opening transaction log file

Improved TBBlue emulation:
-added scroll x,y on ula layer
-optimized ula,lores render routines: 2% less cpu on my computer

Improved Hex editor: can now copy to a different memory zone
Improved menu: can now use PgUp,PgDn to jump menu pages
Improved assembler: added defs command
Improved AY Sheet: now you can select which AY Chip to show
Improved file selector: when asking for a directory, only shows directories, not files
Improved curses driver: symbol @ simulates ESC on menu
Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap-no-change-machine" and applies to .sna and .z80

Fixed Pentagon border: now ukflag demo is perfect
Fixed Spectrum 128k machines border: now ula128, scroll2017 demos are perfect
Fixed f_seek call on esxdos handler
Fixed segfault error when using breakpoints like peek/opcode in config file
Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
Fixed average cpu statistics when footer is not enabled
Fixed kempston mouse emulation on Next machine: wheel bits always return 0
Fixed bug extracting PAWS words when a word is a pronoun
Fixed undocumented opcode ED76: I had IM0 but it's IM1
Fixed loading and saving +3 .z80 snapshots
Fixed placing menu windows when using zx desktop and machines TSConf, TBBlue, CPC and QL



Version 8.0. 19 July 2019 - World Destruction edition

Improved menu interface:
-Program Window can be extended horizontally and have a right region to place menu zxvision windows (called ZX Desktop)
-Draw engine: now it allows transparency
-Menu windows can be placed and resized to the whole program window
-Some windows geometry (position, size) are saved in the configuration
-Hotkeys now show right capitalization (lowercase or uppercase)