@@ -121,6 +121,7 @@ extern char *openmenu_key_message;
 
 extern z80_bit menu_desactivado;
 extern z80_bit menu_desactivado_andexit;
+extern z80_bit menu_desactivado_file_utilities;
 
 extern void set_menu_overlay_function(void (*funcion)(void) );
 extern void reset_menu_overlay_function(void);
